feat(react-training) ending auhtentication page styling

--- a/src/components/routes/authentication/authentication.styles.scss
+++ b/src/components/routes/authentication/authentication.styles.scss
@@ -1,9 +1,6 @@
-.sign-up-container {
+.authentication-container {
     display: flex;
-    flex-direction: column;
-    width: 380px;
-
-    h2 {
-        margin: 10px 0;
-    }
-}
+    width: 900px;
+    justify-content: space-between;
+    margin: 30px auto;
+  }
