feat(react-training): created cart items icon and dropdown list

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 20px 40px;
   font-family: 'Open Sans',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -20,3 +21,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
